--- a/app/profilePage.html
+++ b/app/profilePage.html
@@ -138,19 +138,19 @@
                           <h5 class="panel-title">Your Stores</h5>
                         </div>
                         <div class="store">
-                          <div class="companyLogo col-md-2">
+                          <div class="companyLogo col-sm-2 col-md-2">
                             <img src="http://www.pueblo.net/sites/pueblo.net/files/logo_pueblo_rojo_0.png" alt="">
                           </div>
-                          <div class="compannyNumberName col-md-10">
+                          <div class="compannyNumberName col-sm-10 col-md-10">
                             <h2>120398 || Pueblo</h2>
                           </div>
                         </div>
 
                         <div class="store">
-                          <div class="companyLogo col-md-2">
+                          <div class="companyLogo col-sm-2 col-md-2">
                             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/7-eleven-brand.svg/2000px-7-eleven-brand.svg.png" alt="">
                           </div>
-                          <div class="compannyNumberName col-md-10">
+                          <div class="compannyNumberName col-sm-10 col-md-10">
                             <h2>120398 || 7Eleven</h2>
                           </div>
                         </div>
