--- a/app/planificasionPicos.html
+++ b/app/planificasionPicos.html
@@ -115,6 +115,9 @@
                   <div class="row">
                     <div class="col-sm-12 col-md-4">
                       <div class="panel panel-primary">
+                        <div class="panel-heading">
+                          <h5 class="panel-title">Starting Overview</h5>
+                        </div>
                         <div class="valuesStack">
                             <div id="totalStores" class="col-sm-3 col-md-3">
                               <h5>Total Stores</h5>
@@ -166,7 +169,7 @@
                                 <td class="danger">15</td>
                                 <td>10</td>
                                 <td>3</td>
-                                <td>
+                                <td data-product-id="5">
                                   <input type="checkbox" class="tableCheckBox control-primary">
                                 </td>
                               </tr>
@@ -177,7 +180,7 @@
                                 <td>15</td>
                                 <td>10</td>
                                 <td>3</td>
-                                <td>
+                                <td data-product-id="2">
                                   <input type="checkbox" class="tableCheckBox control-primary" disabled="disabled">
                                 </td>
                               </tr>
@@ -189,7 +192,7 @@
                                 <td>15</td>
                                 <td>10</td>
                                 <td>3</td>
-                                <td>
+                                <td data-product-id="0">
                                   <input type="checkbox" class="tableCheckBox control-primary" disabled="disabled">
                                 </td>
                               </tr>
@@ -201,7 +204,7 @@
                                 <td class="danger">15</td>
                                 <td>10</td>
                                 <td>3</td>
-                                <td>
+                                <td data-product-id="3">
                                   <input type="checkbox" class="tableCheckBox control-primary">
                                 </td>
                               </tr>
@@ -213,13 +216,18 @@
                                 <td class="danger">15</td>
                                 <td>10</td>
                                 <td>3</td>
-                                <td>
+                                <td data-product-id="1">
                                   <input type="checkbox" class="tableCheckBox control-primary">
                                 </td>
                               </tr>
                             </tbody>
                           </table>
 
+                        </div>
+                        <div class="panel-heading" style="border-top-right-radius:0; border-top-left-radius:0;">
+                          <h5 class="panel-title">Total Overview</h5>
+                        </div>
+                        <div class="panel-body">
                           <div class="col-sm-12">
                             <div class="resultStack">
                               <div id="totalStores" class="col-sm-2">
