pushing for test

--- a/app/equipmentValidation.html
+++ b/app/equipmentValidation.html
@@ -124,23 +124,23 @@
                         </div>
                       </div>
                       <hr>
-                      <input id="inputBrand" type="text" class="form-control" style="width: 350px; float:left; margin-right:20px;" placeholder="Brand:">
-                      <input id="inputEquipment" type="text" class="form-control" style="width: 350px;" placeholder="Equipment Type:">
+                      <input id="inputBrand" type="text" class="inputText form-control" style="width: 350px; float:left; margin-right:20px;" placeholder="Brand:">
+                      <input id="inputEquipment" type="text" class="inputText form-control" style="width: 350px;" placeholder="Equipment Type:">
                     </div>
 
                     <div class="panel-body">
                       <div id="equipment">
-                        <div class="equipmentCol">
+                        <div class="equipmentCol" data-hotspot="5">
                           <div class="equipmentHeader">
                             <h2>Hotspot 1</h2>
                           </div>
-                          <div class="equipmentcell" data-brand="Heineken" data-type="towel">
+                          <div class="equipmentcell" data-brand="Heineken" data-type="towel" data-id="1">
                             <img src="https://retail.propelbi.com/images/equipments/88012351.jpg" alt="">
                           </div>
-                          <div class="equipmentcell" data-brand="Heineken" data-type="bar">
+                          <div class="equipmentcell" data-brand="Heineken" data-type="bar" data-id="1">
                             <img src="https://retail.propelbi.com/images/equipments/241.jpg" alt="">
                           </div>
-                          <div class="equipmentcell" data-brand="Stolichnaya" data-type="bar">
+                          <div class="equipmentcell" data-brand="Stolichnaya" data-type="bar" data-id="1">
                             <img src="https://retail.propelbi.com/images/equipments/451.jpg" alt="">
                           </div>
                           <div class="equipmentcell" data-brand="Stolichnaya" data-type="bar">
@@ -148,47 +148,47 @@
                           </div>
                         </div>
 
-                        <div class="equipmentCol">
+                        <div class="equipmentCol" data-hotspot="5">
                           <div class="equipmentHeader">
                             <h2>Hotspot 2</h2>
                           </div>
-                          <div class="equipmentcell" data-brand="Heineken" data-type="stand">
+                          <div class="equipmentcell" data-brand="Heineken" data-type="stand" data-id="1">
                             <img src="https://retail.propelbi.com/images/equipments/HK131490.jpg" alt="">
                           </div>
-                          <div class="equipmentcell" data-brand="Heineken" data-type="table-stand">
+                          <div class="equipmentcell" data-brand="Heineken" data-type="table-stand" data-id="1">
                             <img src="https://retail.propelbi.com/images/equipments/88010233.jpg" alt="">
                           </div>
-                          <div class="equipmentcell" data-brand="Johnny Walker Black Label" data-type="poster">
+                          <div class="equipmentcell" data-brand="Johnny Walker Black Label" data-type="poster" data-id="1">
                             <img src="https://retail.propelbi.com/images/equipments/454.jpg" alt="">
                           </div>
                         </div>
 
-                        <div class="equipmentCol">
+                        <div class="equipmentCol" data-hotspot="5">
                           <div class="equipmentHeader">
                             <h2>Hotspot 2</h2>
                           </div>
-                          <div class="equipmentcell" data-brand="Stolichnaya" data-type="condiment tray">
+                          <div class="equipmentcell" data-brand="Stolichnaya" data-type="condiment tray" data-id="2">
                             <img src="https://retail.propelbi.com/images/equipments/461.jpg" alt="">
                           </div>
-                          <div class="equipmentcell" data-brand="Stolichnaya" data-type="bar mat">
+                          <div class="equipmentcell" data-brand="Stolichnaya" data-type="bar mat" data-id="2">
                             <img src="https://retail.propelbi.com/images/equipments/462.jpg" alt="">
                           </div>
-                          <div class="equipmentcell" data-brand="Johnny Walker Black Label" data-type="bar mat">
+                          <div class="equipmentcell" data-brand="Johnny Walker Black Label" data-type="bar mat" data-id="3">
                             <img src="https://retail.propelbi.com/images/equipments/464.jpg" alt="">
                           </div>
                         </div>
 
-                        <div class="equipmentCol">
+                        <div class="equipmentCol" data-hotspot="5">
                           <div class="equipmentHeader">
                             <h2>Hotspot 2</h2>
                           </div>
-                          <div class="equipmentcell" data-brand="Buchanans" data-type="tray">
+                          <div class="equipmentcell" data-brand="Buchanans" data-type="tray" data-id="5">
                             <img src="https://retail.propelbi.com/images/equipments/470.jpg" alt="">
                           </div>
-                          <div class="equipmentcell" data-brand="Buchanans" data-type="ice becket">
+                          <div class="equipmentcell" data-brand="Buchanans" data-type="ice becket" data-id="4">
                             <img src="https://retail.propelbi.com/images/equipments/471.jpg" alt="">
                           </div>
-                          <div class="equipmentcell" data-brand="Heineken" data-type="poster">
+                          <div class="equipmentcell" data-brand="Heineken" data-type="poster" data-id="6">
                             <img src="https://retail.propelbi.com/images/equipments/Q191.jpg" alt="">
                           </div>
                         </div>
